Architecture CSS - Applied BEM syntax

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,5 +1,5 @@
 {% if site.disqus %}
-<div class="comments">
+<div class="comments__post">
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
 
