--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <!-- Catergory index DOM -->
-<h1 class="page-title">{{ page.category | capitalize | replace: "-", " " }}</h1>
+<h1 class="title title__page">{{ page.category | capitalize | replace: "-", " " }}</h1>
 {% if site.categories[page.category] %}
   {% for post in site.categories[page.category] %}
 		{% include post-header.html %}
