--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -1,5 +1,5 @@
-<div class="post-header">
-  <h1 class="post-title"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
-  <h2 class="post-subtitle">{{ post.subtitle }}</h2>
-  <div class="post-date">{{ post.date | date: "%e %B %Y" }} - {{ post.date | date: "%H:%M" }}</div>
+<div class="header__post">
+  <h1 class="title__post"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
+  <h2 class="subtitle__post">{{ post.subtitle }}</h2>
+  <div class="date__post">{{ post.date | date: "%e %B %Y" }} - {{ post.date | date: "%H:%M" }}</div>
 </div>
