--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
+  <h1 class="title title__page">{{ page.title }}</h1>
   <div class="entry">
     {{ content }}
   </div>
