--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <!-- Tag index DOM -->
-<h1 class="page-title">{{ page.tag }}</h1>
+<h1 class="title title__page">{{ page.tag }}</h1>
 {% if site.tags[page.tag] %}
   {% for post in site.tags[page.tag] %}
     {% include post-header.html %}
