--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,4 +1,4 @@
-.wrapper-masthead {
+.wrapper__masthead {
   margin-bottom: 4rem;
   background-color: $darkest-color;
 
@@ -7,7 +7,7 @@
   }
 }
 
-.site-info {
+.site__info {
   padding: 1rem 0;
   float: left;
   width: 33.334%;
@@ -24,7 +24,7 @@
   }
 }
 
-.site-avatar {
+.site__avatar {
   float: left;
   margin: 0 0.5rem 0 0;
   width: 40px;
@@ -36,7 +36,7 @@
   }
 }
 
-.site-name {
+.site__name {
   margin: 0;
   padding: 0;
   color: white;
@@ -53,7 +53,7 @@
   }
 }
 
-.site-description {
+.site__description {
   margin: 0;
   padding: 0;
   color: white;
@@ -70,7 +70,7 @@
   }
 }
 
-.site-nav {
+.site__nav {
   float: right;
 
   ul {
