--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -1,5 +1,9 @@
 <div class="header__post">
   <h1 class="title__post"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
   <h2 class="subtitle__post">{{ post.subtitle }}</h2>
-  <div class="date__post">{{ post.date | date: "%e %B %Y" }} - {{ post.date | date: "%H:%M" }}</div>
+  <p class="informations__post">
+		{% for category in post.categories %}
+	    <a href="/categories/{{ category }}/">{{ category | capitalize }}</a>
+	  {% endfor %} - {{ post.date | date: "%e %B %Y" }}
+  </p>
 </div>
