--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -48,8 +48,11 @@
     line-height: 1.1;
   }
   @include breakpoint-m {
-    line-height: 2;
-    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 2.3;
+  }
+  @include breakpoint-xs {
+    display: none;
   }
 }
 
