--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -8,6 +8,9 @@ h1, h2, h3, h4, h5, h6 {
   @include breakpoint-m {
     padding: 0.75rem 0 0.375rem;
   }
+  @include breakpoint-s {
+    padding: 0.625rem 0 0.25rem;
+  }
 }
 
 h1 {
@@ -15,6 +18,9 @@ h1 {
 
   @include breakpoint-m {
     font-size: 1.375rem;
+  }
+  @include breakpoint-s {
+    font-size: 1.25rem;
   }
 }
 
@@ -24,6 +30,9 @@ h2 {
   @include breakpoint-m {
     font-size: 1.25rem;
   }
+  @include breakpoint-s {
+    font-size: 1.125rem;
+  }
 }
 
 h3 {
@@ -32,6 +41,9 @@ h3 {
   @include breakpoint-m {
     font-size: 1.125rem;
   }
+  @include breakpoint-s {
+    font-size: 1rem;
+  }
 }
 
 h4 {
@@ -39,6 +51,9 @@ h4 {
 
   @include breakpoint-m {
     font-size: 1rem;
+  }
+  @include breakpoint-s {
+    font-size: 0.875rem;
   }
 }
 
@@ -49,10 +64,20 @@ h5 {
   @include breakpoint-m {
     font-size: 1rem;
   }
+  @include breakpoint-s {
+    font-size: 0.875rem;
+  }
 }
 
 h6 {
   font-size: 1rem; // 16
+
+  @include breakpoint-m {
+    font-size: 0.875rem;
+  }
+  @include breakpoint-s {
+    font-size: 0.75rem;
+  }
 }
 
 /* Paragraph */
