--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -67,6 +67,10 @@
   p {
     font-family: $mono-font;
     font-size: 0.875rem;
+
+    @include breakpoint-s {
+      font-size: 0.75rem;
+    }
   }
 }
 
