--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -19,8 +19,11 @@
   @include breakpoint-l {
     width: 30%;
   }
-  @include breakpoint-m {
-    width: 20%;
+  @include breakpoint-s {
+    width: 21%;
+  }
+  @include breakpoint-xxs {
+    width: auto;
   }
 }
 
@@ -33,6 +36,11 @@
   @include breakpoint-l {
     width: 32px;
     height: 32px;
+  }
+  @include breakpoint-s {
+    width: 24px;
+    height: 24px;
+    margin: 0.25rem 0.375rem 0 0;
   }
 }
 
@@ -52,6 +60,10 @@
     line-height: 2.3;
   }
   @include breakpoint-xs {
+    font-size: 0.75rem;
+    line-height: 2.7;
+  }
+  @include breakpoint-xxs {
     display: none;
   }
 }
@@ -115,6 +127,12 @@
         @include breakpoint-l {
           padding: 0 0.25rem;
           line-height: 4rem;
+        }
+        @include breakpoint-s {
+          padding: 0 0.125rem;
+        }
+        @include breakpoint-xs {
+          font-size: 0.75rem;
         }
       }
     }
