--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -82,6 +82,10 @@
     margin: 0.75rem 0 0;
     font-family: $mono-font;
     font-size: 0.875rem;
+
+    @include breakpoint-s {
+      font-size: 0.75rem;
+    }
   }
 
   a {
