--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -2,7 +2,7 @@
   margin-bottom: 4rem;
   background-color: $darkest-color;
 
-  @include breakpoint-m {
+  @include breakpoint-l {
     margin-bottom: 3rem;
   }
 }
@@ -16,14 +16,18 @@
     cursor: pointer;
   }
 
-  @include breakpoint-l {
+  @include breakpoint-xl {
     width: 30%;
   }
-  @include breakpoint-s {
+  @include breakpoint-m {
     width: 21%;
   }
-  @include breakpoint-xxs {
+  @include breakpoint-xs {
     width: auto;
+  }
+  @include breakpoint-xxs {
+    width: 50%;
+    padding: 0.25rem 0;
   }
 }
 
@@ -33,11 +37,11 @@
   width: 40px;
   height: 40px;
 
-  @include breakpoint-l {
+  @include breakpoint-xl {
     width: 32px;
     height: 32px;
   }
-  @include breakpoint-s {
+  @include breakpoint-m {
     width: 24px;
     height: 24px;
     margin: 0.25rem 0.375rem 0 0;
@@ -51,20 +55,23 @@
   font-size: 1.125rem;
   line-height: 1.2;
 
-  @include breakpoint-l {
+  @include breakpoint-xl {
     font-size: 1rem;
     line-height: 1.1;
   }
-  @include breakpoint-m {
+  @include breakpoint-l {
     font-size: 0.875rem;
     line-height: 2.3;
   }
-  @include breakpoint-xs {
+  @include breakpoint-s {
     font-size: 0.75rem;
     line-height: 2.7;
   }
-  @include breakpoint-xxs {
+  @include breakpoint-xs {
     display: none;
+  }
+  @include breakpoint-xxs {
+    display: block;
   }
 }
 
@@ -76,17 +83,22 @@
   font-weight: 500;
   line-height: 1.2;
 
-  @include breakpoint-l {
+  @include breakpoint-xl {
     font-size: 0.875rem;
     line-height: 1.1;
   }
-  @include breakpoint-m {
+  @include breakpoint-l {
     display: none;
   }
 }
 
 .site__nav {
   float: right;
+
+  @include breakpoint-xxs {
+    width: 100%;
+    text-align: center;
+  }
 
   ul {
     list-style: none;
@@ -98,10 +110,33 @@
       margin: 0;
       padding: 0;
 
-      &:last-child {
+      &:first-child {
+        float: right;
         margin-left: 1rem; 
         padding-left: 1rem;
         border-left: 1px solid $dark-color;
+        
+        @include breakpoint-s {
+          margin-left: 0.5rem; 
+        }
+
+        @include breakpoint-xxs {
+          position: absolute;
+          top: 0;
+          right: 0.5rem;
+          margin-left: 0; 
+          padding-left: 0;
+          border-left: none;
+        }
+
+        a {
+
+          @include breakpoint-xxs {
+            padding: 0;
+            line-height: 2.5rem;
+          }
+
+        }
       }
 
       a {
@@ -112,27 +147,35 @@
         line-height: 4.5rem;
         border: none;
 
+        @include breakpoint-xl {
+          padding: 0 0.25rem;
+          line-height: 4rem;
+        }
+        @include breakpoint-m {
+          padding: 0 0.125rem;
+        }
+        @include breakpoint-s {
+          font-size: 0.75rem;
+        }
+        @include breakpoint-xxs {
+          line-height: 3rem;
+          padding: 0 0.1875rem;
+        }
+
         &:hover {
           color: white;
           background: none;
           border: none;
+
+          @include breakpoint-l {
+            background-color: $dark-color;
+          }
         }
 
         &:active {
           color: $medium-color;
           background: none;
           border: none;
-        }
-
-        @include breakpoint-l {
-          padding: 0 0.25rem;
-          line-height: 4rem;
-        }
-        @include breakpoint-s {
-          padding: 0 0.125rem;
-        }
-        @include breakpoint-xs {
-          font-size: 0.75rem;
         }
       }
     }
