--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -5,10 +5,10 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.4;
   font-weight: bold;
 
-  @include breakpoint-m {
+  @include breakpoint-l {
     padding: 0.75rem 0 0.375rem;
   }
-  @include breakpoint-s {
+  @include breakpoint-m {
     padding: 0.625rem 0 0.25rem;
   }
 }
@@ -16,10 +16,10 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 1.5rem; // 24
 
-  @include breakpoint-m {
+  @include breakpoint-l {
     font-size: 1.375rem;
   }
-  @include breakpoint-s {
+  @include breakpoint-m {
     font-size: 1.25rem;
   }
 }
@@ -27,10 +27,10 @@ h1 {
 h2 {
   font-size: 1.375rem; // 22
 
-  @include breakpoint-m {
+  @include breakpoint-l {
     font-size: 1.25rem;
   }
-  @include breakpoint-s {
+  @include breakpoint-m {
     font-size: 1.125rem;
   }
 }
@@ -38,10 +38,10 @@ h2 {
 h3 {
   font-size: 1.25rem; // 20
 
-  @include breakpoint-m {
+  @include breakpoint-l {
     font-size: 1.125rem;
   }
-  @include breakpoint-s {
+  @include breakpoint-m {
     font-size: 1rem;
   }
 }
@@ -49,10 +49,10 @@ h3 {
 h4 {
   font-size: 1.125rem; // 18
 
-  @include breakpoint-m {
+  @include breakpoint-l {
     font-size: 1rem;
   }
-  @include breakpoint-s {
+  @include breakpoint-m {
     font-size: 0.875rem;
   }
 }
@@ -61,10 +61,10 @@ h5 {
   font-size: 1.125rem; // 18
   font-style: italic;
 
-  @include breakpoint-m {
+  @include breakpoint-l {
     font-size: 1rem;
   }
-  @include breakpoint-s {
+  @include breakpoint-m {
     font-size: 0.875rem;
   }
 }
@@ -72,10 +72,10 @@ h5 {
 h6 {
   font-size: 1rem; // 16
 
-  @include breakpoint-m {
+  @include breakpoint-l {
     font-size: 0.875rem;
   }
-  @include breakpoint-s {
+  @include breakpoint-m {
     font-size: 0.75rem;
   }
 }
@@ -182,7 +182,7 @@ blockquote {
     padding: 0;
   }
 
-  @include breakpoint-m {
+  @include breakpoint-l {
     margin: 0.5rem 0 0.5rem 1.25rem;
     padding: 0 0 0 1.25rem;
   }
@@ -209,7 +209,7 @@ code {
     padding: 0;
     letter-spacing: -0.3px;
 
-    @include breakpoint-m {
+    @include breakpoint-l {
       font-size: 1rem;
     }
   }
