Style - Responsive typography for small sizes

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,14 +1,21 @@
 .wrapper__footer {
   margin-top: 6rem;
   padding: 1rem 0 1rem;
-  font-size: 0.8125rem; // 13px
+  font-size: 0.8125rem; // 13
   border-top: 1px dashed $lightest-color;
-
-  p {
-  	display: inline-block;
-  }
 
   @include breakpoint-l {
     margin-top: 4rem;
+  }
+  @include breakpoint-xs {
+    margin-top: 3rem;
+  }
+  @include breakpoint-smallest {
+  	margin-top: 2rem;
+    font-size: 0.75rem; // 12
+  }
+
+  p {
+  	display: inline-block;
   }
 }
