Bugfix - fixed icon paths for Google Manifest

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -24,6 +24,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <!-- end Favicon -->
 
     {% if page.excerpt %}
     <meta name="description" content="{{ page.excerpt| strip_html }}" />
