--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -5,7 +5,7 @@ layout: default
 <h1 class="title title__page">{{ page.category | capitalize | replace: "-", " " }}</h1>
 {% if site.categories[page.category] %}
   {% for post in site.categories[page.category] %}
-		{% include post-header.html %}
+		{% include template_post-header.html %}
   {% endfor %}
 {% else %}
   <p>Aucun post n'appartient à la catégorie <strong>{{ page.category | capitalize | replace: "-", " " }}</strong></p>
