--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -5,7 +5,7 @@ layout: default
 <h1 class="title title__page">{{ page.tag }}</h1>
 {% if site.tags[page.tag] %}
   {% for post in site.tags[page.tag] %}
-    {% include post-header.html %}
+    {% include template_post-header.html %}
   {% endfor %}
 {% else %}
   <p>Aucun post n'utilise le tag <strong>{{ page.tag }}</strong></p>
