change © symbol for html code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
     <div class="wrapper__footer">
       <div class="container container__footer">
         <footer>
-          <p>© {{ 'now' | date: "%Y" }} {{ site.name }} <a href="https://github.com/alt-escape/alt-escape.github.io/blob/master/LICENSE" target="_blank">MIT License</a></p>
+          <p>&copy; {{ 'now' | date: "%Y" }} {{ site.name }} <a href="https://github.com/alt-escape/alt-escape.github.io/blob/master/LICENSE" target="_blank">MIT License</a></p>
           <p class="util--float-right">Hosted on <a href="https://github.com/alt-escape/alt-escape.github.io" target="_blank">Github</a></p>
           {% include plugin_svg-icons.html %}
         </footer>
