--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -111,6 +111,10 @@ a {
     background-color: $light-color;
   }
 }
+a[target="_blank"]::after {
+  content: "↗";
+  padding-left: 0.125rem;
+}
 
 p, li, ul, ol {
 
