Add Ethical Design badge in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,15 +33,6 @@
       {{ content }}
     </div>
     <!-- Footer -->
-    <div class="wrapper__footer">
-      <div class="container container__footer">
-        <footer>
-          <p>&copy; {{ 'now' | date: "%Y" }} {{ site.name }}<br/><a href="https://github.com/alt-escape/alt-escape.github.io/blob/master/LICENSE" target="_blank">MIT License</a></p>
-          <p>Créé avec <a href="http://jekyllrb.com/" target="_blank">Jekyll</a><br/>Hébergé sur <a href="https://github.com/alt-escape/alt-escape.github.io" target="_blank">Github</a></p>
-          {% include plugin_svg-icons.html %}
-        </footer>
-      </div>
-    </div>
-    {% include data_analytics.html %}
+    {% include template_site-footer.html %}
   </body>
 </html>
