--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -33,4 +33,24 @@
       }
     }
   }
+
+  .ethical-design {
+    display: block;
+    float: none;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+
+    a {
+
+      &:hover, &:active {
+        background: none;
+      }
+    }
+
+    img {
+      width: 8rem;
+      height: auto;
+    }
+  }
 }
