Add target:"_blank" to Ethical Design badge

--- a/_includes/template_ethical-design.html
+++ b/_includes/template_ethical-design.html
@@ -1,3 +1,3 @@
 <div class="ethical-design">
-	<a href='https://ind.ie/ethical-design'><img alt='Ethical Design logo' src='/images/ethical-design-badge-small.svg'></a>
+	<a href='https://ind.ie/ethical-design' target="_blank"><img alt='Ethical Design logo' src='/images/ethical-design-badge-small.svg'></a>
 </div>
