--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -35,16 +35,17 @@
   }
 
   .ethical-design {
-    display: block;
-    float: none;
-    width: 100%;
-    margin: 0 auto;
     text-align: center;
 
     a {
 
       &:hover, &:active {
         background: none;
+      }
+
+      &::after {
+        content: none;
+        padding: none;
       }
     }
 
